# overhearing_agents

./: .gitignore  README.md  pyproject.toml  requirements-hf.txt  requirements-qwen25.txt  requirements-step.txt  requirements.txt  server.py  terminal.py  terminal_realtime.py
data/: download-cr.sh  download-cr2.sh  mux.py  mux.sh  transcribe-time.sh  transcribe.py  transcribe.sh
evaluation/: README.md  Win_explore_model_logs.ipynb  apimodels.py  explore_posteval.ipynb  explore_preeval.ipynb  models.py  server.py  utils.py
evaluation/config/: annotator-assignments.yaml  classifications.yaml  experiments.yaml  generate-experiments.py
evaluation/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
evaluation/frontend/src/: App.vue
evaluation/gold/: deduplicate.ipynb  stopwatch_from_tsv.py
experiments/: experiment.py  index.py  main.py  matcha.py  models.py  utils.py
experiments/prompts/: __init__.py  fewshot_noreason.py  fewshot_react.py  fewshot_transcribe.py  realtime_noreason_0shot_audio.md  realtime_noreason_0shot_audio_openai.md  realtime_noreason_0shot_text.md  realtime_noreason_0shot_text_openai.md  realtime_tom_0shot_audio.md  realtime_tom_0shot_audio_transcribe.md  realtime_tom_0shot_audio_transcribe_openai.md  realtime_tom_0shot_text.md  utils.py
experiments/slurm/: gen_slurm.py
foundry-module/: module.json
foundry-module/dev/: simple-ws-server.py
foundry-module/scripts/: main.js
overhearing_agents/: __init__.py  config.py  embeddings.py  eventlogger.py  events.py  session.py  state.py  utils.py
overhearing_agents/engines/: deduplicate.py  guided.py  openai_audio.py  phi4.py  qwen25.py  react.py  ultravox.py
overhearing_agents/engines/step/: README.md  __init__.py  engine.py  tokenizer.py  utils.py
overhearing_agents/kanis/: base.py
overhearing_agents/kanis/dnd/: __init__.py  ai.py  gamedata.py  gamedata_models.py
overhearing_agents/server/: indexer.py  models.py  server.py  session_manager.py
sandbox/: fromfile_demo.py  nospeak_demo.py  terminal_chat.py
viz/: package-lock.json  package.json
viz/src/: App.vue
viz/src/components/: ChatMessages.vue  Drawer.vue  NotificationsOverlay.vue  Todo.vue  Tree.vue
viz/src/router/: index.ts
viz/src/ts/: api.ts  dnd.ts  interactive.ts  models.ts  state.ts  (+1 more)
(+241 files in other folders)
